--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Matamata Desktop</title>
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/menu.css">
@@ -14,10 +15,28 @@
 </head>
 
 <body>
-    <h1 style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: rgb(248, 248, 242);"><strong>Matamata</strong> Desktop</h1>
+    <h1
+        style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: var(--mm-foreground);">
+        <strong>Matamata</strong> Desktop
+    </h1>
     <div class="row">
-        <div class="col-auto mx-auto"><a class="menu-button" href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Install Requirements</button></a><a class="menu-button" href="../character-creator/cc.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Configure Character</button></a><a class="menu-button" href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Create Timestamps</button></a><a class="menu-button" href="../render/render.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Render Video</button></a></div>
+        <div class="col-auto mx-auto"><a class="menu-button" href="../autoinstall/decider.html"><button
+                    class="btn btn-primary" type="button"
+                    style="background: var(--mm-button-background);color: var(--mm-button-color);"
+                    title="Easily install app dependancies">Install Requirements</button></a><a class="menu-button"
+                href="../character-creator/cc.html"><button class="btn btn-primary" type="button"
+                    style="background: var(--mm-button-background);color: var(--mm-button-color);"
+                    title="Easily install app dependancies">Configure Character</button></a><a class="menu-button"
+                href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button"
+                    style="background: var(--mm-button-background);color: var(--mm-button-color);"
+                    title="Easily install app dependancies">Create Timestamps</button></a><a class="menu-button"
+                href="../render/render.html"><button class="btn btn-primary" type="button"
+                    style="background: var(--mm-button-background);color: var(--mm-button-color);"
+                    title="Easily install app dependancies">Render Video</button></a></div>
     </div>
+    <script>exports = {}</script>
+    <script src="menu.js"></script>
+
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
